# markdraw

./: .gitignore  .mcp.json  .wiki-guardrails.yml  AGENTS.md  BACKLOG.md  CLAUDE.md  CNAME  LICENSE  LICENSING.md  PRIVACY.md  README.md  index.html  lefthook.yml  opencode.json  package.json  privacy.html  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/commands/: issue.md  plan.md
.claude/hooks/: suggest-mutation-test.sh  wiki-policy-check.sh  wiki-reindex.sh  wiki-suggest-ingest.sh
.claude/rules/: deploy.md  github.md  solid-ui.md
.codex/: config.toml  hooks.json
.codex/hooks/: suggest-mutation-test.sh
.github/workflows/: build-desktop.yml  deploy-site.yml  pr-checks.yml
.opencode/hooks/: wiki-consider.sh  wiki-drift-audit.sh  wiki-reindex.sh
.opencode/plugins/: mutation-suggest.js
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/e2e/: README.md  bridge.ts
apps/desktop/e2e/fixtures/: mcp-echo-server.mjs
apps/desktop/e2e/fixtures/sample-workspace/: README.md  guide.adoc  notes.md
apps/desktop/e2e/fixtures/sample-workspace/diagramas/arquitetura/: sketch.excalidraw
apps/desktop/e2e/fixtures/sample-workspace/partials/: intro.adoc
apps/desktop/e2e/memory/: README.md  scenario.cjs
apps/desktop/e2e/specs/: golden-path.webview.test.ts  mcp.webview.test.ts  palettes.webview.test.ts  workspace.tauri.test.ts
apps/desktop/scripts/: dev-sign-run.sh  dev.sh  macos-dev-signing-setup.sh  prepare-excalidraw-guest.mjs
apps/desktop/src/: app.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/.cargo/: config.toml  mutants.toml
apps/desktop/src-tauri/benches/: read_dir.rs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai_artifacts.rs  ai_http.rs  ai_keychain.rs  ai_mcp.rs  ai_mcp_oauth.rs  cli_agent.rs  frontmatter.rs  html_preview.rs  lib.rs  main.rs  mcp_discovery.rs  rule_discovery.rs  skill_discovery.rs
apps/desktop/src-tauri/src/ai_index/: fts_query.rs  mod.rs
apps/desktop/src/components/: excalidraw-frame.tsx  figma-capture-button.tsx  window-controls.tsx
apps/desktop/src/lib/: ai-artifacts.test.ts  ai-artifacts.ts  ai-chat-artifacts.ts  ai-commands.test.ts  ai-commands.ts  ai-config.ts  ai-credentials.ts  ai-index.ts  ai-mcp.ts  ai-memory-scopes.test.ts  ai-memory-scopes.ts  ai-tools.test.ts  ai-tools.ts  chaos-invoke.ts  cli-agent.ts  dnd.ts  file-loader.test.ts  file-loader.ts  folder.test.ts  folder.ts  fs-paths.test.ts  fs-paths.ts  fs.ts  mcp-discovery.test.ts  mcp-discovery.ts  menu.ts  navigation-target.ts  navigation.test.ts  navigation.ts  pdf-text.test.ts  pdf-text.ts  release-notes.test.ts  release-notes.ts  rule-discovery.ts  scratch.ts  skill-discovery.test.ts  skill-discovery.ts  tray.ts  updater-drain.test.ts  updater-install.test.ts  (+5 more)
apps/desktop/src/lib/__chaos__/: README.md
apps/extension/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/extension/public/: background.js  content.js  manifest.json
apps/extension/src/: ambient.d.ts  app.tsx  main.tsx
apps/extension/src/lib/: dnd.ts  file-loader.ts  folder.ts  fs.ts  hash.ts  navigation.ts  url-mode.ts  url-source.ts
apps/site/: astro.config.mjs  guide.html  index.html  package.json  privacy.html  styles.css  tsconfig.json  vite.config.ts
apps/site/public/: demo.md
apps/site/public/demo-folder/: README.md
apps/site/public/demo-folder/docs/: architecture.adoc  getting-started.adoc  installation.adoc  usage.adoc
apps/site/public/demo-folder/notes/: changelog.md
apps/site/public/scripts/: preferred-download.js
apps/site/scripts/: generate-starlight-content.mjs  ssg-routes.mjs
apps/site/src/: main.tsx  styles.css
apps/site/src/components/: site-layout.tsx
apps/site/src/components/starlight/: header.astro
apps/site/src/content/docs/: index.mdx  privacy.mdx
apps/site/src/content/docs/es/: index.mdx  privacy.mdx
apps/site/src/content/docs/es/guide/: appearance.mdx  assistant.mdx  diagrams.mdx  editor.mdx  export.mdx  index.mdx  indexing.mdx  installation.mdx  mcp.mdx  media.mdx  navigation.mdx  opening-files.mdx  processing.mdx  providers.mdx  search.mdx  (+6 more)
apps/site/src/content/docs/guide/: appearance.mdx  assistant.mdx  diagrams.mdx  editor.mdx  export.mdx  index.mdx  indexing.mdx  installation.mdx  mcp.mdx  media.mdx  navigation.mdx  opening-files.mdx  processing.mdx  providers.mdx  reader-mode.mdx  screenshots.mdx  search.mdx  shortcuts.mdx  tabs.mdx  toc.mdx  workspace-symbols.mdx
apps/site/src/content/docs/pt-br/: index.mdx  privacy.mdx
apps/site/src/pages/: guide-page.tsx  home-page.tsx  privacy-page.tsx
apps/site/src/styles/: starlight.css
assets/: guide-page-Cy_o0JMc.js  index-AZerK1zR.css  index-eA9CsWF1.js  privacy-page-DIPlOLGG.js
demo-folder/docs/: getting-started.adoc
demo-folder/notes/: todo.md
docs/testing/: STRATEGIES.md
patches/: @asciidoctor%2Fopal-runtime@3.0.1.patch  @dnd-kit%2Fdom@0.4.0.patch
plans/: system-theme-option.md
public/: manifest.json
scripts/: bump-ext-version.sh  bump-version.sh  check-ipc-contract.sh  generate-icons.sh  release-check.sh  release-smoke.sh  run-e2e.sh  wait-app-ready.ts
src/: env.d.ts  newtab.tsx
src/components/: App.tsx  Editor.tsx  EmptyState.tsx  FileTree.tsx  FileTreeItem.tsx  Preview.tsx  SearchOverlay.tsx  Toolbar.tsx
src/components/ui/: dropdown-menu.tsx
src/lib/: asciidoc.ts  fs.ts  kroki.ts  markdown.ts  recent-files.ts  watcher.ts
src/styles/: asciidoc.css  index.css
tools/loom-watcher-tests/: Cargo.toml
tools/loom-watcher-tests/tests/: watcher.rs
wiki/: index.md  log.md
wiki/architecture/: ipc.md  keyboard-shortcuts.md  overview.md  preview-pipeline.md
wiki/performance/: targets.md
wiki/process/: linear-workflow.md  operations-followups.md
wiki/release/: flow.md
wiki/roadmap/: ai-integration.md
wiki/testing/: conventions.md  operations.md  strategies.md
(+21 files in other folders)
