[package]
name = "asciimark"
version = "0.6.2"
description = "AsciiMark Desktop - AsciiDoc & Markdown viewer"
edition = "2021"

[lib]
name = "asciimark_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-opener = "2"
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
