[package]
name = "asciimark"
version = "0.7.2"
description = "AsciiMark Desktop - AsciiDoc & Markdown viewer"
edition = "2021"

[lib]
name = "asciimark_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# Required by `tauri::generate_context!()` macro expansion at compile time —
# cargo-machete reports it as unused because no Rust source references it
# directly, but removing it breaks the build.
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-opener = "2"
trash = "5"

# Dev-only: registered with #[cfg(debug_assertions)] in lib.rs so release
# builds get stripped by LTO. Lets AI agents drive the running app via the
# tauri-mcp-server tools (screenshots, JS exec, IPC monitoring).
tauri-plugin-mcp-bridge = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
# proptest mirrors fast-check on the JS side: randomized inputs + shrinking
# for property-based tests on the pure helpers.
proptest = { version = "1", default-features = false, features = ["std"] }
# `test` feature only in dev-dependencies so release builds don't carry
# tauri::test::MockRuntime in the binary. Cargo unifies dependency features
# at test time, so `cargo test` still has access to MockRuntime.
tauri = { version = "2", features = ["test"] }

[[bench]]
name = "read_dir"
harness = false

[package.metadata.cargo-machete]
ignored = ["serde_json"]
