[package]
name = "markdraw"
version = "0.25.0"
description = "Markdraw Desktop - AsciiDoc & Markdown viewer"
edition = "2021"

[lib]
name = "markdraw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# Required by `tauri::generate_context!()` macro expansion at compile time —
# cargo-machete reports it as unused because no Rust source references it
# directly, but removing it breaks the build.
serde_json = "1"
# rmcp's CredentialStore / StateStore traits are `#[async_trait]`, so our
# keychain-backed impl needs the same attribute macro (ai_mcp_oauth.rs).
async-trait = "0.1"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-opener = "2"
# Routes AI provider HTTP calls through Rust so the webview avoids CORS
# (WKWebView blocks direct cross-origin fetches to provider APIs). DJA-11F.
tauri-plugin-http = "2"
trash = "5"
# `ignore` is the same gitignore crate that powers ripgrep — handles
# nested .gitignore files, negation, globs. Used by `read_dir` when
# the user toggles "Respect .gitignore" in the file tree.
ignore = "0.4"

# Per-root workspace index store (DJA-15): SQLite FTS5 (keyword/BM25) + packed
# f32 vector embeddings. `bundled` vendors a SQLite compiled with FTS5 ENABLED
# (SQLITE_ENABLE_FTS5), which is what makes `CREATE VIRTUAL TABLE … USING fts5`
# work — the system SQLite (notably older macOS) may ship without it, so
# `bundled` is mandatory, not an optimization. (The rusqlite `fts5` feature is
# only the Rust-level custom-tokenizer API, which we don't use.)
rusqlite = { version = "0.32", features = ["bundled"] }

# MCP (Model Context Protocol) client — connects to any number of MCP servers
# over stdio (spawned child process) or Streamable HTTP. Lives in Rust because
# the webview can't spawn processes and MCP-over-HTTP from the webview hits the
# same SSE-delivery wall that forced generateText over streamText. See ai_mcp.rs.
rmcp = { version = "1", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    # Generic MCP OAuth (RFC 9728 discovery + DCR + auth-code/PKCE + refresh) for
    # OAuth-gated HTTP servers — AuthorizationManager + AuthClient + the keychain
    # CredentialStore in ai_mcp_oauth.rs. Pulls in `oauth2`.
    "auth",
] }
# For typed HTTP header names/values when passing custom MCP auth headers.
http = "1"
# Parse Codex's `~/.codex/config.toml` (and per-project `.codex/config.toml`)
# when discovering MCP servers other agent tools already configure (mcp_discovery.rs).
# Already compiled transitively; declared direct so the module can `use toml`.
toml = "0.9"
# Streaming provider HTTP (ai_http.rs): tauri-plugin-http buffers whole
# responses so SSE never streams — the POST happens here in Rust instead and
# body chunks flow to the webview over an ipc Channel. Pinned to 0.12 to share
# tauri-plugin-http's reqwest; `stream` adds bytes_stream().
reqwest = { version = "0.12", features = ["stream"] }
# rmcp 1.7's OAuth `AuthClient` wraps a reqwest **0.13** client (rmcp pins 0.13,
# while the rest of the app + tauri-plugin-http stay on 0.12 above). The two
# `reqwest::Client` types don't unify, so the AuthClient's inner client must be
# the 0.13 one rmcp's `StreamableHttpClient` impl targets. Alias the 0.13 line —
# already compiled in-tree for rmcp + tauri-plugin-updater, so zero extra build
# cost — under a second name to construct exactly that type (see ai_mcp.rs).
#
# `default-tls` is LOAD-BEARING, not cosmetic: reqwest 0.13's `default-tls` pulls
# `rustls` → `__rustls-aws-lc-rs` (a rustls crypto provider). tauri-plugin-updater
# pulls reqwest's `rustls-tls` = `rustls-no-provider` (rustls with NO provider), so
# without a provider in the UNIFIED reqwest 0.13, any client built with rustls
# panics at startup — `default_rustls_crypto_provider` aborts with "No provider
# set". That bit RELEASE builds only (the updater is disabled in dev), crashing on
# the startup update check. Keep this feature even if default-features are ever
# turned off here.
reqwest_oauth = { package = "reqwest", version = "0.13", features = ["default-tls"] }
futures-util = "0.3"
# Percent-decode the path of `htmlpreview://` requests (the custom scheme that
# serves an HTML file's directory as an isolated origin for SPA previews).
percent-encoding = "2"
# Rewrite CSS-module imports (`import x from "y.css" with { type: "css" }`) in
# served JS — WKWebView doesn't support CSS module scripts, so the preview
# transpiles them to a constructable-stylesheet shim (see html_preview.rs).
regex = "1"
# Async runtime for the MCP manager: the child-process transport and holding an
# async Mutex across .await on tool calls need process + multi-thread + time.
# Promoted from dev-dependency (was rt+macros, test-only) to a runtime dep.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
    "time",
    "io-util",
] }

# Dev-only: registered with #[cfg(debug_assertions)] in lib.rs so release
# builds get stripped by LTO. Lets AI agents drive the running app via the
# tauri-mcp-server tools (screenshots, JS exec, IPC monitoring).
tauri-plugin-mcp-bridge = "0.11"

# `keyring` stores AI provider API keys in the OS secure store (DJA-11E).
# v3 requires picking a native backend per platform via features.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# Dev-only "DEV" dock badge (set in lib.rs under debug_assertions).
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSApplication", "NSResponder", "NSDockTile"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString"] }
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(unix)'.dependencies]
# Process-group kill (killpg) so the login-shell PATH probe can terminate the
# whole shell tree on timeout — see cli_agent.rs `run_path_query`.
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", default-features = false }
# proptest mirrors fast-check on the JS side: randomized inputs + shrinking
# for property-based tests on the pure helpers.
proptest = { version = "1", default-features = false, features = ["std"] }
# `test` feature only in dev-dependencies so release builds don't carry
# tauri::test::MockRuntime in the binary. Cargo unifies dependency features
# at test time, so `cargo test` still has access to MockRuntime.
tauri = { version = "2", features = ["test"] }

[[bench]]
name = "read_dir"
harness = false

[package.metadata.cargo-machete]
ignored = ["serde_json"]
